xliff-22/test-suite/core/invalid/bad_UnknownDataRefValue.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en" trgLang="fr">
 <file id="f1">
  <unit id="1">
   <originalData>
    <data id="1">code1</data>
   </originalData>
   <segment id="1">
    <source><ph id="1" dataRef="badId"/></source>
   </segment>
  </unit>
 </file>
</xliff>
